@@ -35,7 +35,7 @@ public abstract class AbstractJsonCollectionPostInterceptor implements Intercept
 
         Map<Class<?>, List<PropertyDescriptor>> classPropertiesMap = new LinkedHashMap<>();
 
-        for (ResultMap resultMap: mappedStatement.getResultMaps()) {
+        for (ResultMap resultMap : mappedStatement.getResultMaps()) {
             List<PropertyDescriptor> propertyDescriptors = this.getJsonCollectionProperties(resultMap.getType());
             if (propertyDescriptors.isEmpty()) {
                 continue;
@@ -57,7 +57,7 @@ public abstract class AbstractJsonCollectionPostInterceptor implements Intercept
         for (Object o : collection) {
 
             Optional<Class<?>> optional = map.keySet().stream().filter(t -> t.isAssignableFrom(o.getClass())).findFirst();
-            if (!optional.isPresent()) {
+            if (optional.isEmpty()) {
                 continue;
             }
 
@@ -73,7 +73,7 @@ public abstract class AbstractJsonCollectionPostInterceptor implements Intercept
                     .stream()
                     .map(v -> doMappingResult(v, entry.getKey(), map.get(entry.getKey())))
                     .filter(Objects::nonNull)
-                    .collect(Collectors.toList());
+                    .toList();
             newResult.addAll(mapValues);
         }
 
